# StockGUI

./: .gitignore  Cargo.toml  main.py  requirements.txt
src/: api.rs  config.py  get_symbol.py  lib.rs  plot.rs  welcome.py
